--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Multiple HTML Pages</h1>
     <a href="contact.html">Contact Me</a>
+    <a href="project/weather.html">Weather</a>
   </body>
 </html>
