--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
   <body>
     <h1>Multiple HTML Pages</h1>
     <a href="contact.html">Contact Me</a>
+    <br />
     <a href="project/weather.html">Weather</a>
+    <br />
+    <a href="#picture">Picture</a>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+    <h2 id="picture">Some picture</h2>
+    <h2>Some text</h2>
+
+    <h2>Some text</h2>
+    <h2>Some text</h2>
+
+    <h2>Some text</h2>
+    <h2>Some text</h2>
   </body>
 </html>
