--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="project/weather.html">Weather</a>
     <br />
     <a href="#picture">Picture</a>
+    <br />
+    <a href="contact.html#email">Send an email</a>
     <h2>Some text</h2>
     <h2>Some text</h2>
     <h2>Some text</h2>
