--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Contact Me</h1>
     <a href="index.html">Homepage</a>
+    <br />
+    <a href="mailto:name@gmail.com" id="email">name@gmail.com</a>
   </body>
 </html>
