--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiple HTML Pages</title>
+    <style>
+      a {
+        color: blue;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: blue;
+        text-decoration: underline;
+      }
+
+      a:visited {
+        color: darkblue;
+      }
+    </style>
   </head>
   <body>
     <h1>Multiple HTML Pages</h1>
