--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiple HTML Pages</title>
     <style>
+      :root {
+        --primary-color: red;
+      }
       a {
         color: blue;
         text-decoration: none;
@@ -18,6 +21,14 @@
       a:visited {
         color: darkblue;
       }
+
+      h2 {
+        color: var(--primary-color);
+      }
+
+      h3 {
+        border: 1px solid var(--primary-color);
+      }
     </style>
   </head>
   <body>
@@ -30,6 +41,7 @@
     <br />
     <a href="contact.html#email">Send an email</a>
     <h2>Some text</h2>
+    <h3>Some text</h3>
     <h2>Some text</h2>
     <h2>Some text</h2>
     <h2>Some text</h2>
@@ -45,16 +57,12 @@
     <h2>Some text</h2>
     <h2>Some text</h2>
     <h2>Some text</h2>
-    <h2>Some text</h2>
-
     <h2>Some text</h2>
     <h2>Some text</h2>
     <h2 id="picture">Some picture</h2>
     <h2>Some text</h2>
-
     <h2>Some text</h2>
     <h2>Some text</h2>
-
     <h2>Some text</h2>
     <h2>Some text</h2>
   </body>
